# savant

./: CMakeLists.txt  build.sh  vcpkg.json
include/models/: book.h  patron.h
src/: main.cpp
src/models/: book.cpp  book.h  patron.cpp
tests/: CMakeLists.txt  test_main.cpp
